# advent-of-code-2025

./: .gitignore  CMakeLists.txt  README.md
include/: aoc.h
src/: day00.cpp  day01-ai.cpp  day01.cpp  day02-ai.cpp  day02.cpp  day03-ai.cpp  day03.cpp  day04.cpp
